feat: add filter

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
       Extensions:
       <input type="text" id="extFilter" placeholder=".jpg,.png,.docx" size="30">
     </label>
+    <label>
+      🔍 Filter:
+      <input type="text" id="filterInput" placeholder="Type part of filename or folder..." size="40" />
+    </label>
   </div>
 
   <hr>
