feat: add loading msg

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
 
   <hr>
 
+  <div id="loadingMessage" style="display:none; color:#888; text-align:center; margin:1rem 0;">
+    🔍 Scanning folders... Please wait.
+  </div>
+  
   <ul id="result"></ul>
 
   <script src="renderer.js"></script>
