feat: add deletefilebtn

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <div class="controls">
     <button id="selectBtn">Select Folders</button>
     <button id="scanBtn">Scan</button>
+    <button id="viewLogBtn" style="float: right;">🔍 View Delete Log</button>
   </div>
 
   <div class="controls">
