feat: add compare size checkbox

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   </div>
 
   <div class="controls">
+    <label><input type="checkbox" id="useSize"> Compare File Size</label>
     <label><input type="checkbox" id="useDate"> Compare File Date</label>
     <label><input type="checkbox" id="useHash"> Compare MD5 Hash</label>
     <label>
